--- a/src/scss/utilities/_variables.scss
+++ b/src/scss/utilities/_variables.scss
@@ -1,18 +1,20 @@
 /* ********** Custom Properties ********** */
 :root {
-  --primary-font:     'Averta Regular';
-  --secondary-font:   'Averta Black';
+  --primary-font:     'Heebo';
+  --primary-font-thin:     'Heebo Thin';
+  --primary-font-light:     'Heebo Light';
+  --primary-font-black:     'Heebo Black';
+  --secondary-font:   'PT Serif';
   --font-size: 16px;
   --line-height: 1.6;
 
-  --primary-color:    #021E35;
-  --secondary-color:  #00ABFF;
-  --tertiary-color:   #12CBC4;
-  --quaternary-color: #000;
-  --quinary-color:    #FFF;
+  --primary-color:    #EE2655;
+  --secondary-color:  #F7F7F7;
+  --tertiary-color:   #000;
+  --quaternary-color: #ffffff;
 
-  --text-color-black: var(--quaternary-color);
-  --text-color-white: var(--quinary-color);
+  --text-color-black: var(--tertiary-color);
+  --text-color-white: var(--quaternary-color);
 
   --z-index-down:   25;
   --z-index-middle: 50;
