--- a/src/scss/base/_reset.scss
+++ b/src/scss/base/_reset.scss
@@ -6,7 +6,7 @@ html {
   font-size: var(--font-size);
   line-height:  var(--line-height);
   color: var(--text-color-black);
-  background-color: var(--primary-color);
+  background-color: var(--quaternary-color);
 }
 
 *,
