--- a/src/scss/modules/_headerImg.scss
+++ b/src/scss/modules/_headerImg.scss
@@ -42,6 +42,7 @@
       font-family: var(--primary-font--light);
       letter-spacing: 9px;
       text-transform: uppercase;
+      font-family: var(--primary-font-thin);
   
       @include mq(m) { font-size: 5em; letter-spacing: 25px;}
     }
