--- a/src/scss/modules/_testimoni.scss
+++ b/src/scss/modules/_testimoni.scss
@@ -37,6 +37,7 @@
     &__comment {
         padding-top: 1.5em;
         font-size: 2em;
+        font-family: var(--secondary-font-italic);
         color: #FFE200;
     }
 
