--- a/src/scss/utilities/_variables.scss
+++ b/src/scss/utilities/_variables.scss
@@ -1,10 +1,11 @@
 /* ********** Custom Properties ********** */
 :root {
-  --primary-font:     'Heebo';
+  --primary-font:     'Heebo Regular';
   --primary-font-thin:     'Heebo Thin';
   --primary-font-light:     'Heebo Light';
   --primary-font-black:     'Heebo Black';
-  --secondary-font:   'PT Serif';
+  --secondary-font:   'PTSerif Regular';
+  --secondary-font-italic: 'PTSerif Italic';
   --font-size: 16px;
   --line-height: 1.6;
 
